// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Toggle ui default 1`] = `
<div>
  <span
    class="toggle-container toggle-primary"
  >
    <input
      id="toggle"
      type="checkbox"
    />
  </span>
</div>
`;

exports[`Component: Toggle ui with custom label 1`] = `
<div>
  <span
    class="toggle-container toggle-primary"
  >
    <label
      class="d-inline-block toggle-label me-2"
      for="toggle"
    >
      <span
        style="outline: 0;"
        tabindex="0"
      >
        test
      </span>
    </label>
    <input
      id="toggle"
      type="checkbox"
    />
  </span>
</div>
`;

exports[`Component: Toggle ui with text label 1`] = `
<div>
  <span
    class="toggle-container toggle-primary"
  >
    <label
      class="d-inline-block toggle-label me-2"
      for="toggle"
    >
      test
    </label>
    <input
      id="toggle"
      type="checkbox"
    />
  </span>
</div>
`;
